# glue-pyspark-local

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
setup/: docker-compose.yml  glue_4_0_0_pyspark.Dockerfile  set-env.sh
src/: sample.py
tests/: test_sample.py
workflows/: ci.yml
